integrate with the html page

--- a/src/index.html
+++ b/src/index.html
@@ -1,33 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>webcc</title>
     <style>
-        body {
-            background-color: black;
-            color: white;
-            font-family: sans-serif;
-        }
-
-        #content {
-            /* 10x css dev knows how to center a div */
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-        }
+      body {
+        background-color: black;
+        color: white;
+        font-family: sans-serif;
+      }
+      textarea {
+        background-color: black;
+        color: white;
+        border: 1px solid white;
+        width: 100%;
+        height: 100%;
+        font-family: monospace;
+        font-size: 1em;
+        resize: both;
+      }
+      output {
+        font-family: monospace;
+      }
     </style>
-</head>
+  </head>
 
-<body>
+  <body>
     <div id="content">
-        <h1>Open the console and use the "compile" function.</h1>
-        <br />
-        <h1>I can't be bothered to implement a form right now.</h1>
+      <h1>Enter code below.</h1>
+      <textarea id="source" name="source">int main() { return 0; }</textarea>
+      <button id="compile">Compile</button>
+      <h2>Lexer Output</h2>
+      <pre><output id="lexed" for="source"></output></pre>
+      <h2>Parser Output</h2>
+      <pre><output id="parsed" for="source"></output></pre>
     </div>
     <script type="module" src="/index.mjs"></script>
-</body>
-
+  </body>
 </html>
