--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,8 @@
       <pre><output id="lexed" for="source"></output></pre>
       <h2>Parser Output</h2>
       <pre><output id="parsed" for="source"></output></pre>
+      <h2>Assembly</h2>
+      <pre><output id="assembly" for="source"></output></pre>
     </div>
     <script type="module" src="/index.mjs"></script>
   </body>
