add ctrl+enter on web ui

--- a/src/index.html
+++ b/src/index.html
@@ -3,26 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>webcc</title>
-    <style>
-      body {
-        background-color: black;
-        color: white;
-        font-family: sans-serif;
-      }
-      textarea {
-        background-color: black;
-        color: white;
-        border: 1px solid white;
-        width: 80%;
-        height: 100%;
-        font-family: monospace;
-        font-size: 1em;
-        resize: both;
-      }
-      output {
-        font-family: monospace;
-      }
-    </style>
+    <link rel="stylesheet" href="/styles.css" />
   </head>
 
   <body>
