--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
       <h2>Assembly</h2>
       <pre><output id="assembly" for="source"></output></pre>
     </div>
-    <script type="module" src="/index.mjs"></script>
+    <script type="module" src="dist/bundle.js"></script>
   </body>
 </html>
