--- a/index.html
+++ b/index.html
@@ -53,6 +53,6 @@
         <pre><output id="assembly" for="source"></output></pre>
       </div>
     </div>
-    <script type="module" src="dist/bundle.js"></script>
+    <script src="dist/bundle.js"></script>
   </body>
 </html>
