--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <h1>Web C Compiler — Browser Local</h1>
       <textarea id="source" name="source">int main() { return 0; }</textarea>
       <br />
-      <button id="compile">Compile</button>
+      <button id="compile">Compile</button> (This button can be pressed with Ctrl+Enter.)
       <button type="button" class="collapsible" target="lexed-section">
         Toggle Lexer Output
       </button>
