implement basic variables

--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
   <body>
     <div id="content">
       <h1>Web C Compiler — Browser Local</h1>
-      <textarea id="source" name="source">int main() { return 0; }</textarea>
+      <textarea id="source" name="source">
+int main() {
+  return 0;
+}
+</textarea>
       <br />
       <button id="compile">Compile</button> (This button can be pressed with Ctrl+Enter.)
       <button type="button" class="collapsible" target="lexed-section">
