add execute button

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@ int main() {
       <br />
       <button id="compile">Compile</button> (This button can be pressed with
       Ctrl+Enter.)
+      <br />
+      <button id="execute" disabled>Execute</button> (This button can be pressed with
+      Ctrl+Shift+Enter.)
       <button type="button" class="collapsible" target="lexed-section">
         Toggle Lexer Output
       </button>
