--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -20,8 +20,8 @@ int main() {
       <button id="compile">Compile</button> (This button can be pressed with
       Ctrl+Enter.)
       <br />
-      <button id="execute" disabled>Execute</button> (This button can be pressed with
-      Ctrl+Shift+Enter.)
+      <button id="execute" disabled>Execute</button> (This button can be pressed
+      with Ctrl+Shift+Enter.)
       <button type="button" class="collapsible" target="lexed-section">
         Toggle Lexer Output
       </button>
